@@ -7,6 +7,7 @@ Improved menu interface:
 -Some windows geometry (position, size) are saved in the configuration
 -Hotkeys now show right capitalization (lowercase or uppercase)
 -Edit box now has a key to delete all input (cursor down)
+-GUI color bars depend on current style
 
 Changed "Jeff Braine" manufacturer to "New Horizons". Changed Prism machine name to "Prism 512"
 Fixed bug when writing divmmv memory on Chloe machine and underlying RAM in space 0000-3fffh become overwritten
